// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaField component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-dIDWeX {
    box-shadow: none;
    font-size: var(--fontSizes-md);
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-sizing: border-box;
    color: var(--colors-tonal600);
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    min-height: var(--sizes-7);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: calc(var(--space-2) + var(--space-1));
    padding-bottom: calc(var(--space-2) + var(--space-1));
    resize: vertical;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-dIDWeX:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-dIDWeX[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-dIDWeX::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-cVSpVL-kRIfoH-align-baseline {
    align-items: baseline;
  }

  .c-cVSpVL-ejCoEP-direction-row {
    flex-direction: row;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block c-cVSpVL-kRIfoH-align-baseline c-cVSpVL-ejCoEP-direction-row"
          for="description"
        />
      </div>
      <textarea
        class="c-dIDWeX"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;

exports[`TextareaField component renders with an error 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-dIDWeX {
    box-shadow: none;
    font-size: var(--fontSizes-md);
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-sizing: border-box;
    color: var(--colors-tonal600);
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    min-height: var(--sizes-7);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: calc(var(--space-2) + var(--space-1));
    padding-bottom: calc(var(--space-2) + var(--space-1));
    resize: vertical;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-dIDWeX:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-dIDWeX[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-dIDWeX::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-cVSpVL-kRIfoH-align-baseline {
    align-items: baseline;
  }

  .c-cVSpVL-ejCoEP-direction-row {
    flex-direction: row;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block c-cVSpVL-kRIfoH-align-baseline c-cVSpVL-ejCoEP-direction-row"
          for="description"
        />
      </div>
      <textarea
        class="c-dIDWeX"
        error="Error Message"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;
